--- a/Projeto/Projeto5.html
+++ b/Projeto/Projeto5.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto 2 - Projeto Agrinho</title>
+    <title>Projeto 3 - MyDrugs Site</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -278,12 +278,12 @@
     </header>
 
     <main class="content-section py-12 px-6">
-      <h1 class="section-title appear">Projeto Agrinho - 2025</h1>
+      <h1 class="section-title appear">Chat Love</h1>
 
       <div class="project-content">
         <img
-          src="../img/PJ04.PNG"
-          alt="Imagem do Projeto 2"
+          src="../img/ChatLove.PNG"
+          alt="Imagem do Projeto MyDrugs"
           class="project-image w-full"
         />
 
@@ -291,19 +291,27 @@
           <div
             class="w-12 h-12 rounded-full bg-purple-600 flex items-center justify-center mr-4"
           >
-            <i class="fas fa-leaf text-white text-xl"></i>
+            <i class="fas fa-comments text-white text-xl"></i>
+
 
           </div>
-          <h1>Projeto Agrinho</h1>
+          <h1>
+            Chat Amor
+            <span class="series-badge">
+              Inspirado por conexões reais e design emocional
+            </span>
+          </h1>
         </div>
 
         <p>
-          <strong>Projeto Agrinho - Ações que Transformam o Mundo</strong>
-          Este projeto foi desenvolvido como parte da edição 2025 do
-          <strong>Programa Agrinho</strong> com o tema “Ações que Transformam o
-          Mundo”. O objetivo é mostrar como pequenas atitudes no nosso dia a dia
-          podem gerar grandes transformações na sociedade, no meio ambiente e no
-          futuro do nosso planeta.
+          <strong>Chat Amor</strong> é um projeto educacional com foco em design
+          romântico e funcionalidades modernas de um aplicativo de mensagens,
+          desenvolvido com HTML, CSS, JavaScript e Firebase. Trata-se de uma
+          simulação estilizada de um chat em tempo real, criada para aprimorar
+          habilidades em desenvolvimento front-end, estruturação de interfaces e
+          experiência do usuário (UX). O projeto transmite uma estética suave e
+          acolhedora, ideal para representar conexões afetivas de forma criativa
+          e apaixonante.
         </p>
 
         <div class="my-12">
@@ -311,97 +319,66 @@
             <div class="feature-card">
               <div class="flex items-center mb-3">
                 <div
-                  class="w-12 h-12 rounded-full bg-purple-600 flex items-center justify-center mr-4"
+                  class="w-12 h-12 rounded-full bg-pink-500 flex items-center justify-center mr-4"
                 >
-                  <i class="fas fa-list-alt text-white text-sm"></i>
+                  <i class="fas fa-heart text-white text-sm"></i>
                 </div>
-                <h3>Educação Ambiental Interativa</h3>
+                <h3>Interface Romântica</h3>
               </div>
               <ul>
-                <li>
-                  Conteúdos didáticos focados em práticas sustentáveis no meio
-                  rural.
-                </li>
-                <li>
-                  Atividades colaborativas para engajar alunos, professores e
-                  famílias.
-                </li>
-                <li>
-                  Fortalecimento da consciência ambiental e agricultura
-                  familiar.
-                </li>
+                <li>Layout delicado com tons suaves e apaixonantes</li>
+                <li>Tipografia amigável e visual acolhedor</li>
+                <li>Design responsivo para diferentes dispositivos</li>
               </ul>
             </div>
 
             <div class="feature-card">
               <div class="flex items-center mb-3">
                 <div
-                  class="w-12 h-12 rounded-full bg-purple-600 flex items-center justify-center mr-4"
+                  class="w-12 h-12 rounded-full bg-pink-500 flex items-center justify-center mr-4"
                 >
-                  <i class="fas fa-tablet-alt text-white text-sm"></i>
+                  <i class="fas fa-comments text-white text-sm"></i>
                 </div>
-                <h3>Material Didático Digital</h3>
+                <h3>Experiência Intuitiva</h3>
               </div>
               <ul>
-                <li>
-                  Acesso a conteúdos multimídia para facilitar o aprendizado.
-                </li>
-                <li>
-                  Disponível para diferentes faixas etárias e níveis escolares.
-                </li>
-                <li>
-                  Atualizações constantes com informações relevantes sobre
-                  sustentabilidade.
-                </li>
+                <li>Tela de login simples e funcional</li>
+                <li>Lista de contatos organizada com fotos de perfil</li>
+                <li>Transições suaves entre mensagens</li>
               </ul>
             </div>
 
             <div class="feature-card">
               <div class="flex items-center mb-3">
                 <div
-                  class="w-12 h-12 rounded-full bg-purple-600 flex items-center justify-center mr-4"
+                  class="w-12 h-12 rounded-full bg-pink-500 flex items-center justify-center mr-4"
                 >
-                  <i class="fas fa-users text-white text-sm"></i>
+                  <i class="fas fa-code text-white text-sm"></i>
                 </div>
-                <h3>Engajamento Comunitário</h3>
+                <h3>Código Organizado</h3>
               </div>
               <ul>
+                <li>Separação clara entre HTML, CSS e JavaScript</li>
                 <li>
-                  Estimula a participação da comunidade rural em práticas
-                  sustentáveis.
+                  Integração estruturada com Firebase (Auth, Firestore, Storage)
                 </li>
-                <li>
-                  Promove troca de experiências e fortalecimento dos vínculos
-                  locais.
-                </li>
-                <li>
-                  Iniciativas para melhorar a qualidade de vida e o meio
-                  ambiente.
-                </li>
+                <li>Boas práticas aplicadas ao front-end moderno</li>
               </ul>
             </div>
 
             <div class="feature-card">
               <div class="flex items-center mb-3">
                 <div
-                  class="w-12 h-12 rounded-full bg-purple-600 flex items-center justify-center mr-4"
+                  class="w-12 h-12 rounded-full bg-pink-500 flex items-center justify-center mr-4"
                 >
-                  <i class="fas fa-chart-line text-white text-sm"></i>
+                  <i class="fas fa-heart text-white text-sm"></i>
                 </div>
-                <h3>Monitoramento e Avaliação</h3>
+                <h3>Projeto Apresentável</h3>
               </div>
               <ul>
-                <li>
-                  Ferramentas para acompanhar o progresso das ações educativas.
-                </li>
-                <li>
-                  Relatórios que ajudam a ajustar estratégias e ampliar
-                  impactos.
-                </li>
-                <li>
-                  Suporte para tomada de decisão por educadores e gestores
-                  locais.
-                </li>
+                <li>Pronto para deploy com GitHub Pages</li>
+                <li>Ideal para compartilhar com quem se ama</li>
+                <li>Perfeito para mostrar habilidades com emoção</li>
               </ul>
             </div>
           </div>
@@ -409,67 +386,33 @@
 
         <h2>Tecnologias Utilizadas</h2>
         <div class="mb-8">
-          <span class="tech-badge">
-            <i class="fab fa-html5 mr-2"></i>HTML5
-          </span>
-          <span class="tech-badge">
-            <i class="fab fa-css3-alt mr-2"></i>CSS
-          </span>
-          <span class="tech-badge">
-            <i class="fab fa-js mr-2"></i>JavaScript
-          </span>
+          <span class="tech-badge"><i class="fab fa-html5 mr-2"></i>HTML5</span>
+          <span class="tech-badge"
+            ><i class="fab fa-css3-alt mr-2"></i>CSS3</span
+          >
+          <span class="tech-badge"
+            ><i class="fab fa-js mr-2"></i>JavaScript</span
+          >
+          <span class="tech-badge"
+            ><i class="fab fa-github mr-2"></i>GitHub Pages</span
+          >
+            <span class="tech-badge"
+            ><i class="fas fa-database mr-2"></i>Firebase</span
+          >
         </div>
 
         <h2>Objetivo</h2>
         <p>
-          Promover a educação ambiental e o desenvolvimento sustentável nas
-          comunidades rurais por meio de uma plataforma interativa que envolve
-          alunos, professores e famílias. O sistema facilita a disseminação de
-          conhecimentos sobre práticas agrícolas responsáveis, cuidado com o
-          meio ambiente e incentivo à agricultura familiar, fortalecendo o
-          vínculo entre escolas, comunidades e órgãos públicos.
-        </p>
-
-        <h2>Sistema de Monitoramento Agrícola (Possível Integração Futura)</h2>
-        <p>
-          Como um desenvolvimento futuro ou um sistema relacionado, um
-          <strong>Sistema de Monitoramento Agrícola</strong> poderia ser
-          implementado para oferecer dados em tempo real sobre condições do
-          solo, clima e produtividade, possibilitando decisões mais assertivas e
-          sustentáveis. Este sistema poderia incluir:
-        </p>
-        <ul>
-          <li>
-            <strong>Visualização de Dados Agrícolas:</strong> Gráficos e mapas
-            interativos com informações sobre plantações, clima e recursos
-            hídricos.
-          </li>
-          <li>
-            <strong>Alertas Personalizados:</strong> Notificações sobre pragas,
-            condições climáticas adversas e períodos ideais para plantio e
-            colheita.
-          </li>
-          <li>
-            <strong>Registro e Compartilhamento de Práticas:</strong> Plataforma
-            para que agricultores registrem suas práticas e compartilhem
-            experiências.
-          </li>
-          <li>
-            <strong>Educação Continuada:</strong> Conteúdos e atividades para
-            capacitação constante de alunos e agricultores.
-          </li>
-          <li>
-            <strong>Relatórios e Análises:</strong> Ferramentas para escolas e
-            órgãos de apoio avaliarem o impacto das ações e o progresso da
-            comunidade.
-          </li>
-        </ul>
-        <p>
-          A integração com o projeto Agrinho poderia permitir que as informações
-          coletadas e as práticas registradas fossem utilizadas para aprimorar
-          os conteúdos educativos e oferecer suporte direto às comunidades
-          rurais, promovendo um ciclo contínuo de aprendizado e desenvolvimento
-          sustentável.
+          O Chat Amor foi idealizado como um exercício criativo e técnico, com
+          foco em design emocional e interações modernas. A proposta é simular
+          um chat romântico em tempo real, com funcionalidades como login, troca
+          de mensagens, fotos de perfil e indicador de digitação, utilizando
+          tecnologias como HTML, CSS, JavaScript e Firebase. Embora o projeto
+          ainda esteja em desenvolvimento, ele já demonstra um forte domínio de
+          front-end e integração com backend em nuvem. É uma excelente vitrine
+          para mostrar evolução técnica, atenção aos detalhes visuais e
+          capacidade de estruturar uma aplicação real com propósito afetivo e
+          visual encantador.
         </p>
 
         <div class="button-group">
@@ -477,7 +420,7 @@
             <i class="fas fa-arrow-left mr-2"></i> Voltar para o Portfólio
           </a>
           <a
-            href="https://github.com/Theuscirilo/Feira-Comunitaria-Viva?tab=readme-ov-file"
+            href="https://github.com/Theuscirilo/Chat_Amor"
             class="cta-button primary-btn"
             target="_blank"
           >
