--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MC PORTFÓLIO | Matheus Cirilo</title>
+    <title>MC PORTFÓLIO</title>
     <link rel="icon" type="image/png" href="img/LOGOMC.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -459,7 +459,7 @@
 
       .skills-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+        grid-template-columns: repeat(5, 1fr);
         gap: 1.5rem;
         margin-top: 3rem;
       }
@@ -793,6 +793,7 @@
         padding: 1rem;
         color: #333;
         transition: color 0.3s;
+        margin-top: 2rem;
       }
 
       body.dark .mobile-menu-toggle {
@@ -1222,8 +1223,8 @@
             <img src="img/PJ04.PNG" alt="Pré-visualização do Projeto 4" />
             <p>Sistema de solicitações de serviços Rurais Prefeitura</p>
           </a>
-          <a href="projetos/projeto5.html" class="project-card">
-            <img src="img/embreve.jpg" alt="Pré-visualização do Projeto 5" />
+          <a href="Projeto/Projeto5.html" class="project-card">
+            <img src="img/ChatLove.PNG" alt="Pré-visualização do Projeto 5" />
             <p>Projeto 5</p>
           </a>
           <a href="projetos/projeto6.html" class="project-card">
@@ -1388,7 +1389,7 @@
                 <i class="fas fa-envelope"></i>
                 <strong>EMAIL:</strong>
                 <a href="mailto:Matheuscirilodealmeida@gmail.com"
-                  >Matheuscirilodealmeida@gmail.com</a
+                  >matheuscirilodealmeida@gmail.com</a
                 >
               </p>
             </div>
